Se cambio el titulo y el footer

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!Titulo que se muestra en las pestanias del navegador>
-  <title>Document</title>
+  <title>Presentacion</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
   
   <!Pie de pagina>
   <footer>
-    Redes sociales de Camilo:
+    Redes sociales de George:
     <ul>
         <li>Twitter<a href="https://twitter.com/camilomontoyau" target="_blank">@camilomontoyau</a></li>
       <li>Instragram<a href="https://instagram.com/camilomontoyau">@camilomontoyau</a></li>
